# fastapi-auth0-token-verifier

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/fastapi_auth0_token_verifier/: auth.py
